2005-06-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/alarm.c: Implement the missing support.

2005-06-09  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* include/nucleus/pipe.h, skins/rtai/pipe.h: Move rt_pipe_write()
	mode bits to a place also visible from user-space context.

2005-06-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i*/system.h (xnarch_init_fpu):
	Initialization of fusion threads in primary mode.

2005-06-08  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r11c1 which fixes a nasty bug in
	__adeos_setscheduler_root().
	
	* arch/ia64/patches: Upgrade to r7c11; same reason as above.
	
	* arch/ppc/patches: Upgrade to r7c3; same reason as above.
	
	* include/nucleus/asm-i386/syscall.h: Use VSYSCALL support.

2005-06-08  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_fault_handler): Initialize FPU on first use
	of FPU of shadow threads in primary mode.

	* include/nucleus/asm-*/system.h: platform dependent support for
	the same feature.

	* arch/x86/hal/x86.c, arch/ia64/hal/ia64.c: remove "invalid use of
	FPU" message.

2005-06-07  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h (main): Force
	mlockall(MCL_CURRENT) after the user init coded has returned.

	* nucleus/fusion/lib: Deprecate the early fusion interface, which
	is now superseded by the POSIX support in user-space.

	* skins/uvm: Move the UVM portions of the deprecated fusion
	interface to a separate skin.
	
2005-06-06  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/pipe.c (xnpipe_read_wait): Wake up a single reader upon
	data availability.
	
2005-06-06  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix/posix.h: Fix clockid_t enum so that its members
	conform to the kernel defines.

	* nucleus/shadow.c (substitute_linux_syscall): No more syscall
	substitution, since the POSIX skin now handles user-space
	requests.